--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-famiy:Verdana, sans-serif;
+  font-family:Verdana, sans-serif;
   font-size: 14px;
 }
 
@@ -46,4 +46,9 @@ textarea {
 
 .del {
   font-size: 12px;
+}
+
+h2 {
+  font-size: 14px;
+  padding-top: 25px;
 }
